feat:完成登出api與調整登入驗證
