# src/routes/logInAndSigInRoute.ts
@@ -2,12 +2,19 @@ import { Request, Response, NextFunction, Router } from "express";
 import { type RequestHandler, type Handler } from "express";
 import asyncErrorHandler from "@/middlewares/asyncErrorHandler";
 import { signin } from "@/controllers/signInController";
-import { login } from "@/controllers/logInController";
+import { login, logOut } from "@/controllers/logInController";
 import { signUpSwagger } from "@/swaggerConfig/signInSwagger";
-import { logInSwagger } from "@/swaggerConfig/logInSwagger";
+import { logInSwagger, logOutSwagger } from "@/swaggerConfig/logInSwagger";
+import { checkLogIn } from "@/middlewares/auth";
 const router = Router();
 
 router.post("/logIn", logInSwagger, asyncErrorHandler(login) as RequestHandler);
+router.post(
+  "/logOut",
+  logOutSwagger,
+  checkLogIn as Handler,
+  asyncErrorHandler(logOut) as RequestHandler
+);
 router.post(
   "/signIn",
   signUpSwagger,
